30
Added .travis.yml.

29
Enabled USE_OPENCV_HIGHGUI_CPP_API as a workaround to get back working camera with OpenCV 3.2.0, however this is currently incompatible with Kinect v2.
Added CMakeLists.txt.

28
Default project files are now with OpenCV 3.2.0.

27
Improved compatibility of RemoteWebcamMultiSrv with OpenCV 4.1.0.

26
Removed RemoteWebcamSrv.
Improved Linux support.

25
Improved compatibility of RemoteWebcamMultiSrv with OpenCV 4.0.0.
Removed USE_ALTERNATE_RECORDING option.

24
Removed Visual Studio 2008 and Visual Studio 2012 files.

23
Default project files are now with Visual Studio 2017 and OpenCV 2.4.13.

22
Added Python sample client mjpeg.py and updated ReadMe.txt.

21
Improved different line endings support.
Improved compatibility with Visual Studio 2015 and gcc 5.2.1.

20
Improved compatibility with OpenCV 3.1.0.
Added hcenter, vcenter, hshift, vshift parameters in servers configuration files.

19
Improved Linux support.

18
Corrected bug in code reading RemoteWebcamSrv.txt.

17
Changed hard-coded default options.
Minor corrections.

16
Visual Studio 2008 project now uses OpenCV 2.4.9 (download http://www.ensta-bretagne.fr/lebars/Share/OpenCV2.4.9.zip and extract in C:).
Updated ReadMe.txt.

15
Added support of Kinect v2 in RemoteWebcamMultiSrv Visual Studio 2012 project.

14
Minor modifications.
Moved bWindowResizedFromServer in RemoteWebcamCli.txt.
Harmonization of RemoteWebcamCli w.r.t. Video in UxVCtrl.

13
Added bForceSoftwareResize, hscale, vscale parameters in place of scale for the server.

12
Added local video files support to the server.

11
Added rotation, scale and flip on the server side. Note that rotation, scale and flip as well as recording are supported by the client included in AROVTest but not dynamic resolution changes, for this client it is the contrary.

10
Added limited Android support (no video recording).

9
Added limited MJPEG support to the client.

8
Added optional video recording in RemoteWebcamMultiSrv.

7