@@ -49,9 +49,9 @@ jobs:
        - cmake -G "MSYS Makefiles" . && cmake --build .
        #- cmake -G "MSYS Makefiles" -D OpenCV_ARCH=x64 -D OpenCV_RUNTIME=mingw . && cmake --build .
 
-   - name: "Ubuntu 12.04"
+   - name: "Ubuntu 14.04"
      os: linux
-     dist: precise
+     dist: trusty
      compiler: gcc
      before_install: 
        - sudo apt-get -q update || true
