@@ -5,10 +5,26 @@ project(RemoteWebcamMultiSrv)
 
 find_package(OpenCV)
 include_directories(${OpenCV_INCLUDE_DIRS})
-option(USE_OPENCV_HIGHGUI_CPP_API "USE_OPENCV_HIGHGUI_CPP_API" OFF)
+
+option(DISABLE_GUI_REMOTEWEBCAMMULTISRV "DISABLE_GUI_REMOTEWEBCAMMULTISRV" OFF)
+option(DISABLE_TIMER_RECORDING "DISABLE_TIMER_RECORDING" OFF)
+option(DISABLE_CUSTOM_BAUDRATE "DISABLE_CUSTOM_BAUDRATE" OFF)
+option(USE_OPENCV_HIGHGUI_CPP_API "USE_OPENCV_HIGHGUI_CPP_API" ON)
+
+if(DISABLE_GUI_REMOTEWEBCAMMULTISRV)
+	add_definitions(-D DISABLE_GUI_REMOTEWEBCAMMULTISRV)
+endif()
+if(DISABLE_TIMER_RECORDING)
+	add_definitions(-D DISABLE_TIMER_RECORDING)
+endif()
+if(DISABLE_CUSTOM_BAUDRATE)
+	add_definitions(-D DISABLE_CUSTOM_BAUDRATE)
+endif()
 if(USE_OPENCV_HIGHGUI_CPP_API)
 	add_definitions(-D USE_OPENCV_HIGHGUI_CPP_API)
 endif()
+
+mark_as_advanced(DISABLE_TIMER_RECORDING DISABLE_CUSTOM_BAUDRATE)
 
 include_directories("${PROJECT_SOURCE_DIR}/../OSUtils")
 include_directories("${PROJECT_SOURCE_DIR}/../Extensions/Img")
