@@ -18,10 +18,6 @@
 #include "OSNet.h"
 #include "CvInc.h"
 #ifdef ENABLE_CVKINECT2SDKHOOK
-#ifndef INCLUDE_HEADERS_OUTSIDE_CVKINECT2SDKHOOK
-#define INCLUDE_HEADERS_OUTSIDE_CVKINECT2SDKHOOK
-#endif // !INCLUDE_HEADERS_OUTSIDE_CVKINECT2SDKHOOK
-#include <Kinect.h>
 #include "CvKinect2SDKHook.h"
 #endif // ENABLE_CVKINECT2SDKHOOK
 
